# 3dRenderer

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
benchmark/: CMakeLists.txt  renderer_benchmark.cpp
include/: Mesh.hpp  Vector.hpp  helperFuncs.hpp  matrix.hpp  renderer.hpp  timer.hpp  triangle.hpp  vector.hpp
src/: main.cpp  renderer.cpp
